# packaging-example

./: pyproject.toml
