[tool.poetry]
name = "inflammation-bananatable"
packages = [{include = "*", from = "inflammation"}]
version = "0.1.0"
description = "Some description"
authors = ["Lorenzo Rossi <lorenzo.rossi299@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
matplotlib = "^3.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[tool.poetry.group.dev]
optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
